--- a/mbTest/package.json
+++ b/mbTest/package.json
@@ -1,46 +1,47 @@
 {
-    "name": "mountebank-tests",
-    "version": "0.0.1",
-    "author": "Brandon Byars <brandon.byars@gmail.com>",
-    "private": true,
-    "description": "Black box tests for mountebank",
-    "scripts": {
-        "api": "mocha --forbid-only --forbid-pending --reporter mocha-multi-reporters --reporter-options configFile=api/config.json 'api/**/*.js'",
-        "cli": "mocha --forbid-only --forbid-pending --reporter mocha-multi-reporters --reporter-options configFile=cli/config.json 'cli/**/*.js'",
-        "js": "mocha --forbid-only --forbid-pending --reporter mocha-multi-reporters --reporter-options configFile=cli/config.json 'js/**/*.js'",
-        "perf": "mocha --forbid-only --forbid-pending --reporter mocha-multi-reporters --reporter-options configFile=perf/config.json 'perf/**/*.js'",
-        "web": "mocha --forbid-only --forbid-pending --reporter mocha-multi-reporters --reporter-options configFile=web/config.json 'web/**/*.js'",
-        "test": "npm run api && npm run cli && npm run js",
-        "airplane": "MB_AIRPLANE_MODE=true npm test"
-    },
-    "dependencies": {
-        "@xmldom/xmldom": "0.8.10",
-        "express": "4.18.2",
-        "fs-extra": "11.2.0",
-        "hpagent": "1.0.0",
-        "jsdom": "24.0.0",
-        "mocha": "10.2.0",
-        "mocha-multi-reporters": "1.5.1",
-        "mountebank": "file:..",
-        "nc": "1.0.3",
-        "nodemailer": "6.9.4",
-        "safe-stable-stringify": "2.4.3",
-        "w3cjs": "0.4.0",
-        "xpath": "0.0.34"
-    },
-    "engines": {
-        "node": ">=16"
-    },
-    "files": [
-        "api",
-        "cli",
-        "js",
-        "perf",
-        "web",
-        "api.js",
-        "baseHttpClient.js",
-        "mb.js",
-        "package.json",
-        "package-lock.json"
-    ]
+  "name": "mountebank-tests",
+  "version": "0.0.1",
+  "author": "Brandon Byars <brandon.byars@gmail.com>",
+  "private": true,
+  "description": "Black box tests for mountebank",
+  "scripts": {
+    "api": "mocha --forbid-only --forbid-pending --reporter mocha-multi-reporters --reporter-options configFile=api/config.json 'api/**/*.js'",
+    "cli": "mocha --forbid-only --forbid-pending --reporter mocha-multi-reporters --reporter-options configFile=cli/config.json 'cli/**/*.js'",
+    "js": "mocha --forbid-only --forbid-pending --reporter mocha-multi-reporters --reporter-options configFile=cli/config.json 'js/**/*.js'",
+    "perf": "mocha --forbid-only --forbid-pending --reporter mocha-multi-reporters --reporter-options configFile=perf/config.json 'perf/**/*.js'",
+    "web": "mocha --forbid-only --forbid-pending --reporter mocha-multi-reporters --reporter-options configFile=web/config.json 'web/**/*.js'",
+    "test": "npm run api && npm run cli && npm run js",
+    "airplane": "MB_AIRPLANE_MODE=true npm test"
+  },
+  "dependencies": {
+    "@xmldom/xmldom": "0.9.3",
+    "express": "^4.21.1",
+    "fs-extra": "11.2.0",
+    "hpagent": "1.2.0",
+    "jsdom": "25.0.1",
+    "mocha": "10.7.3",
+    "mocha-multi-reporters": "1.5.1",
+    "mountebank": "file:..",
+    "nc": "1.0.3",
+    "nodemailer": "6.9.15",
+    "safe-stable-stringify": "2.5.0",
+    "w3cjs": "0.4.0",
+    "xpath": "0.0.34",
+    "yargs-parser": "^21.1.1"
+  },
+  "engines": {
+    "node": ">=22"
+  },
+  "files": [
+    "api",
+    "cli",
+    "js",
+    "perf",
+    "web",
+    "api.js",
+    "baseHttpClient.js",
+    "mb.js",
+    "package.json",
+    "package-lock.json"
+  ]
 }
