--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test:perf": "cd mbTest && npm run perf",
     "test:web": "node tasks/mbtest.js web",
     "test": "npm run lint && npm run test:cover && npm run test:api && npm run test:cli && npm run test:js",
-    "airplane": "MB_AIRPLANE_MODE=true npm test"
+    "airplane": "MB_AIRPLANE_MODE=true npm test",
+    "preinstall": "npx npm-force-resolutions"
   },
   "files": [
     "bin",
@@ -53,47 +54,92 @@
     "service virtualization"
   ],
   "dependencies": {
-    "@xmldom/xmldom": "0.8.10",
+    "@xmldom/xmldom": "0.9.3",
+    "bl": "^6.0.16",
+    "cookiejar": "^2.1.4",
     "cors": "2.8.5",
-    "csv-parse": "5.5.3",
-    "ejs": "3.1.9",
+    "csv-parse": "5.5.6",
+    "ejs": "3.1.10",
     "errorhandler": "1.5.1",
     "escape-html": "1.0.3",
-    "express": "4.18.2",
+    "express": "^4.21.1",
+    "extend": "^3.0.2",
+    "form-data": "^4.0.1",
     "fs-extra": "11.2.0",
-    "http-proxy-agent": "7.0.0",
-    "https-proxy-agent": "7.0.2",
-    "jsonpath-plus": "8.0.0",
-    "mailparser": "3.6.7",
-    "mountebank-formatters": "0.0.2",
-    "nodemailer": "6.9.9",
-    "prom-client": "15.1.0",
+    "hawk": "^9.0.2",
+    "mountebank-formatters": "^0.0.2",
+    "http-proxy-agent": "7.0.2",
+    "https-proxy-agent": "7.0.5",
+    "jsonpath-plus": "10.0.0",
+    "mailparser": "3.7.1",
+    "mime": "^4.0.4",
+    "nodemailer": "6.9.15",
+    "open": "^10.1.0",
+    "optimist": "^0.5.2",
+    "prom-client": "15.1.3",
     "proper-lockfile": "4.1.2",
+    "qs": "^6.13.0",
     "safe-regex": "^2.1.1",
-    "safe-stable-stringify": "2.4.3",
-    "smtp-server": "3.13.2",
-    "winston": "3.11.0",
+    "safe-stable-stringify": "2.5.0",
+    "smtp-server": "3.13.5",
+    "tar": "^7.4.3",
+    "tunnel-agent": "^0.6.0",
+    "w3cjs": "^0.4.0",
+    "winston": "3.15.0",
     "xpath": "0.0.34",
-    "yargs": "17.7.2"
+    "yargs": "17.7.2",
+    "coveralls": "3.1.1",
+    "eslint": "9.12.0",
+    "eslint-plugin-node": "11.1.0",
+    "jsdoc": "4.0.3",
+    "jsdom": "25.0.1",
+    "license-checker": "25.0.1",
+    "mbTest": "file:./mbTest",
+    "mocha": "10.7.3",
+    "mocha-multi-reporters": "1.5.1",
+    "nc": "^1.0.3",
+    "nyc": "^17.1.0",
+    "snyk": "1.1293.1",
+    "minimist": "^1.2.8"
+  },
+  "resolutions": {
+    "request": "2.88.2",
+    "ip": "2.0.1",
+    "ejs": "3.1.10",
+    "socks": "2.8.3",
+    "proxy-agent": "6.4.0",
+    "socks-proxy-agent": "8.0.4",
+    "superagent": "^10.1.0",
+    "superagent-proxy": "3.0.0",
+    "pac-proxy-agent": "7.0.2",
+    "pac-resolver": "7.0.1",
+    "degenerator": "5.0.1",
+    "netmask": "2.0.2",
+    "tough-cookie": "5.0.0",
+    "yargs-parser": "21.1.1",
+    "firebase-tools": "13.22.0",
+    "router": "1.3.8",
+    "superstatic": "9.0.3",
+    "mem": "10.0.0",
+    "braces": "3.0.3",
+    "cookie": "1.0.0"
   },
   "devDependencies": {
     "coveralls": "3.1.1",
-    "eslint": "8.56.0",
+    "eslint": "9.12.0",
     "eslint-plugin-node": "11.1.0",
-    "firebase-tools": "13.1.0",
-    "jsdoc": "4.0.2",
-    "jsdom": "24.0.0",
+    "jsdoc": "4.0.3",
+    "jsdom": "25.0.1",
     "license-checker": "25.0.1",
     "mbTest": "file:./mbTest",
-    "mocha": "10.2.0",
+    "mocha": "10.7.3",
     "mocha-multi-reporters": "1.5.1",
     "nc": "^0.0.0",
-    "nyc": "^15.1.0",
-    "snyk": "1.1276.0",
-    "w3cjs": "^0.1.21"
+    "nyc": "^17.1.0",
+    "snyk": "1.1293.1"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
   },
   "snyk": true
 }
